--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "colors": "^1.4.0",
     "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1"
   }
