--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "joi": "^17.10.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1"
