--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.10.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.2",
