--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "joi": "^17.10.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
