--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "cloudinary": "^1.41.0",
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "joi": "^17.10.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.2",
